@@ -5,7 +5,7 @@ DEFS =
 
 noinst_LTLIBRARIES = libshadow.la
 
-libshadow_la_LDFLAGS = -version-info 0:0:0
+libshadow_la_LDFLAGS = -version-info 0:0:0 -lpassphrase
 
 libshadow_la_SOURCES = \
 	commonio.c \
@@ -53,7 +53,9 @@ libshadow_la_SOURCES = \
 	shadowio.h \
 	shadowmem.c \
 	spawn.c \
-	utent.c
+	utent.c \
+	xgetpass.c \
+	xgetpass.h
 
 if WITH_TCB
 libshadow_la_SOURCES += tcbfuncs.c tcbfuncs.h
