@@ -1,0 +1,67 @@
+/*
+ * Copyright (c) 2015       , Mattias Andrée
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ * 3. The name of the copyright holders or contributors may not be used to
+ *    endorse or promote products derived from this software without
+ *    specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
+ * PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT
+ * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+ * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+ * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+ * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+ * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+#include <config.h>
+
+#ident "$Id$"
+
+#include <unistd.h>
+#include <passphrase.h>
+#include <fcntl.h>
+#include <errno.h>
+#include <stdio.h>
+
+char *xgetpass (const char *prompt, int is_new)
+{
+	int fd, saved_errno;
+	char *pass;
+
+	fd = open ("/dev/tty", O_RDWR);
+	if (-1 == fd) {
+		return NULL;
+	}
+
+	passphrase_disable_echo1 (fd);
+	fprintf (stderr, "%s", prompt);
+	fflush (stderr);
+	pass = passphrase_read2 (fd, is_new
+	                         ? PASSPHRASE_READ_NEW |
+	                           PASSPHRASE_READ_SCREEN_FREE
+	                         : PASSPHRASE_READ_EXISTING);
+	saved_errno = errno;
+	passphrase_reenable_echo1 (fd);
+	errno = saved_errno;
+	return pass;
+
+	/*
+	return getpass (prompt);
+	(void) is_new;
+	*/
+}
+
